--- a/work/src/org/kuali/kfs/module/bc/report/BudgetAccountSalaryDetail.jrxml
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetAccountSalaryDetail.jrxml
@@ -1348,7 +1348,7 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{appointmentFundingMonth}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="false" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
 						x="510"
 						y="0"
